--- a/index.html
+++ b/index.html
@@ -168,8 +168,7 @@
     Excels under pressurous circumstances and is willing to devote their heart and soul to helping others.</h3>
     <button type="button"class="btn btn-lg btn-light download-button"> <i class="fa-regular fa-envelope"></i>Email</button>
     <button type="button"class="btn btn-lg btn-dark download-button"> <i class="fa-solid fa-phone"></i>Phone</button>
-    <h3><td><a href="file:///Users/cjchildress/Downloads/ChildressLab9Cogs3.pdf">"Click here to view my resume!"</a></td></h3></section>
-<footer id="footer">
+    <h3><td><a href="ChildressLab9Cogs3.pdf">"Click here to view my resume!"</a></td></h3></section><footer id="footer">
   <p>"Do or do not...there is no try" - Master Yoda</p>
   <i class="fa-solid fa-heart-pulse fa-3x"></i>
 </footer>
